@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-29T08:22:50Z",
-  "count_outdated" : 2110,
-  "uniques_outdated" : 402,
-  "count" : 2145,
+  "timestamp" : "2022-05-29T16:25:34Z",
+  "count_outdated" : 2111,
+  "uniques_outdated" : 403,
+  "count" : 2146,
   "uniques" : 425,
   "clones" : [
-    {
-      "timestamp": "2022-05-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 2,
@@ -70,8 +63,8 @@
     },
     {
       "timestamp": "2022-05-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
