@@ -3,11 +3,6 @@
   "uniques": 15,
   "clones": [
     {
-      "timestamp": "2022-05-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -49,7 +44,7 @@
     },
     {
       "timestamp": "2022-05-29T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
