@@ -1,3 +1,10 @@
+2022-05-29T16:25:34Z:
+* notice: last 14d: unq all: 15 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 402 2110 / 425 2145
+* notice: next accum: outdated-unq outdated-all / unq all: 403 2111 / 425 2146
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: changed dates: [2022-05-29]
+
 2022-05-29T08:22:50Z:
 * notice: last 14d: unq all: 15 35
 * notice: prev accum: outdated-unq outdated-all / unq all: 402 2110 / 424 2144
